# vis2mobile

./: .gitignore  AGENT.md  AGENTS.md  README.md  biome.json  create_projects_all_cicero_examples_baseline.py  create_projects_all_vega_examples.py  create_projects_all_vega_examples_baseline.py  delete_caches.fish  fix_projects.py  migration_plan_and_progress.md  package.json  prepare_project.py  prepare_project_vega.py  prepare_project_vega_baseline.py  prompt.md  pyproject.toml  run_conversions_all_cicero_examples.py  run_conversions_all_vega_examples.py  test_vis2mobile.ipynb
agents/: html_to_image.py  html_to_pdf.py
agents/coder_agent/: MobileChartShell.tsx  action_space.md  coder_agent.py
app/: page.tsx
cicero-baseline-projects/bar/: pyproject.toml
cicero-examples/: french-election-desktop-processed.html  french-election-desktop.html  kennedy-desktop-processed.html  process_html.py  us-cabinet-entire-desktop-processed.html
components/: BudgetsMobileChart.tsx  FrenchElectionChart.tsx  SalesChart.tsx  SalesLineChart.tsx  french-election-data.ts
gallery/: AGENTS.md  README.md  biome.json  package.json
html-examples/: budgets-desktop-processed.html  spending-bubble-desktop-processed.html  spills-desktop-processed.html  us-cabinet-partial-desktop-processed.html
mobile-vis-template/: .gitignore  AGENTS.md  README.md  package.json  screenshot.py  transform-plan.md
vega-baseline-projects/: check.fish
vega-mobile-projects/vega-altair-09/: package.json  pyproject.toml  transform-plan.md
vega-mobile-projects/vega-altair-09/original_visualization/: desktop.html
vega-mobile-projects/vega-altair-09/src/components/: Visualization.tsx
vega-mobile-projects/vega-altair-09/src/lib/: data.ts
vis2mobile_py/: utils.py
(+1029 files in other folders)
