[project]
name = "vega_mobile-vega-altair-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "scipy>=1.17.0",
]
